# Bible-Cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bible-cl.py  bible-cli.py  bible_cli.py  pyproject.toml  release.py  requirements.txt  setup.py  test_bible_cli.py
