[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bible-cli"
version = "1.0.2"
description = "A command-line interface for reading and searching the Bible"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Wisdom Hambolu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
]

dependencies = [
    "rich>=13.7.0",
    "rapidfuzz>=3.6.1",
]

[project.scripts]
bible = "bible_cli:main" 
